--- a/stuff/.classpath
+++ b/stuff/.classpath
@@ -2,5 +2,9 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="res/files"/>
+	<classpathentry excluding="files/" kind="src" path="res"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="res/sqliteJar/sqlite-jdbc-3.20.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
