--- a/stuff/res/files/datos.properties
+++ b/stuff/res/files/datos.properties
@@ -1,6 +1,7 @@
 #Datos del usuario
-#Tue Jan 05 09:25:05 CET 2021
+#Tue Jan 05 09:58:26 CET 2021
 apellido=Garcia
 direccion=sabino arana 45
+floatData=1.834
 telefono=601259876
 nombre=Alberto
